gl31-master/src/test/deca/context/invalid/sansobjet/affect_void_void.deca
// Description:
//    Affectation et typage : associe un void a un void
//
// Resultats:
//    Ligne 15: Affectation de types compatibles mais '=' impossible
//
// Historique:
//    cree le 08/01/2021

{
   void a;
   void b;

   // Doit etre refuse.
   a = b;
}
